--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <h3>Google Maps-Corporate Office</h3>
                     <div class="map-container">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.5823360349284!2d90.41323631543203!3d23.79791198456605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c7a0f70deb73%3A0x30c36498f9024311!2sUnicorn%20Plaza!5e0!3m2!1sen!2sbd!4v1677660000000!5m2!1sen!2sbd"
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14602.603335906379!2d90.4157!3d23.795445000000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c7a1155556fd%3A0x5f74c479bcf999c5!2z4KaG4Ka44Ka_4Kav4Ka84Ka-4KaoIOCml-CnjeCmsOCngeCmqg!5e0!3m2!1sen!2sbd!4v1764827016359!5m2!1sen!2sbd"
                             width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
